Deployment/debug-curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-curl
spec:
  containers:
  - name: curl
    image: curlimages/curl 
    command: [ "sleep", "600" ]
