Deployment/anm-destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: topology-flow
  namespace: internal
spec:
  host: anm.internal.svc.cluster.local
  trafficPolicy: # Apply to all ports
    portLevelSettings:
    - port:
        number: 8090
      loadBalancer:
         simple: PASSTHROUGH
    # connectionPool:
    #   http: 
    #     h2UpgradePolicy: DO_NOT_UPGRADE
    #     useClientProtocol: true
