Deployment/apimgr-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: apimgr-admin
spec:
  hosts:
    - 
  ports:
    - number: 8085
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
