Deployment/egress-cnn-gtw-ext.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egress-apim-ext
  namespace: external
spec:
  selector:
    istio: istio-egressgateway-ext
  servers:
  - port:
      number: 80
      name: https-port-for-tls-origination
      protocol: HTTPS
    hosts:
    - edition.cnn.com
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-cnn
spec:
  host: istio-egressgateway-ext.external.svc.cluster.local
  subsets:
  - name: cnn
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 80
        tls:
          mode: ISTIO_MUTUAL
          sni: edition.cnn.com

# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: egress-apim-ext
#   namespace: external
# spec:
#   selector:
#     istio: istio-egressgateway-ext
#   servers:
#   - port:
#       number: 443
#       name: https
#       protocol: https
#     hosts:
#     - "*"
#     tls:
#       mode: PASSTHROUGH
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: egressgateway-for-cnn
#   namespace: external
# spec:
#   host: istio-egressgateway-ext.external.svc.cluster.local
#   subsets:
#   - name: cnn
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: direct-cnn-through-egress-gateway
#   namespace: external
# spec:
#   hosts:
#   - edition.cnn.com
#   gateways:
#   - mesh
#   - egress-apim-ext
#   tls:
#   - match:
#     - gateways:
#       - mesh
#       port: 443
#       sniHosts:
#       - edition.cnn.com
#     route:
#     - destination:
#         host: istio-egressgateway-ext.external.svc.cluster.local
#         subset: cnn
#         port:
#           number: 443
#   - match:
#     - gateways:
#       - egress-apim-ext
#       port: 443
#       sniHosts:
#       - edition.cnn.com
#     route:
#     - destination:
#         host: edition.cnn.com
#         port:
#           number: 443
#       weight: 100
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: direct-google-through-egress-gateway
#   namespace: external
# spec:
#   hosts:
#   - www.google.com
#   gateways:
#   - mesh
#   - istio-egressgateway-ext
#   tls:
#   - match:
#     - gateways:
#       - mesh
#       port: 443
#       sniHosts:
#       - www.google.com
#     route:
#     - destination:
#         host: istio-egressgateway-ext.external.svc.cluster.local
#         subset: cnn
#         port:
#           number: 443
#   - match:
#     - gateways:
#       - istio-egressgateway-ext
#       port: 443
#       sniHosts:
#       - www.google.com
#     route:
#     - destination:
#         host: www.google.com
#         port:
#           number: 443
#       weight: 100
