Deployment/egress-cnn-gtw-int.yaml
# TLS originated by the application
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egress-apim-int
  namespace: internal
spec:
  selector:
    istio: istio-egressgateway-int
  servers:
  - port:
      number: 443
      name: https-port-for-tls-origination
      protocol: TLS
    hosts:
    - "*"
    tls:
      mode: PASSTHROUGH
---
# CNN configuration
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-cnn-through-egress-gateway
  namespace: internal
spec:
  hosts:
  - edition.cnn.com
  gateways:
  - egress-apim-int
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 443
    route:
    - destination:
        host: istio-egressgateway-int.internal.svc.cluster.local
        subset: apim-egress
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway-int
      port: 443
    route:
    - destination:
        host: edition.cnn.com
        port:
          number: 443
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: apim-egress
  namespace: internal
spec:
  host: istio-egressgateway-int.internal.svc.cluster.local
  subsets:
  - name: apim-egress
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cnn
  namespace: internal
spec:
  hosts:
  - edition.cnn.com
  ports:
  - number: 443
    name: tls-cnn
    protocol: TLS
  resolution: DNS
---
# google configuration
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-google-through-egress-gateway
  namespace: internal
spec:
  hosts:
  - www.google.com
  gateways:
  - egress-apim-int
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 443
    route:
    - destination:
        host: istio-egressgateway-int.internal.svc.cluster.local
        subset: apim-egress
        port:
          number: 443
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway-int
      port: 443
    route:
    - destination:
        host: www.google.com
        port:
          number: 443
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google
  namespace: internal
spec:
  hosts:
  - www.google.com
  ports:
  - number: 443
    name: tls-google
    protocol: TLS
  resolution: DNS
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: egress-apim-ext
#   namespace: external
# spec:
#   selector:
#     istio: istio-egressgateway-ext
#   servers:
#   - port:
#       number: 443
#       name: https
#       protocol: https
#     hosts:
#     - "*"
#     tls:
#       mode: PASSTHROUGH
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: egressgateway-for-cnn
#   namespace: external
# spec:
#   host: istio-egressgateway-ext.external.svc.cluster.local
#   subsets:
#   - name: cnn
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: direct-cnn-through-egress-gateway
#   namespace: external
# spec:
#   hosts:
#   - edition.cnn.com
#   gateways:
#   - mesh
#   - egress-apim-ext
#   tls:
#   - match:
#     - gateways:
#       - mesh
#       port: 443
#       sniHosts:
#       - edition.cnn.com
#     route:
#     - destination:
#         host: istio-egressgateway-ext.external.svc.cluster.local
#         subset: cnn
#         port:
#           number: 443
#   - match:
#     - gateways:
#       - egress-apim-ext
#       port: 443
#       sniHosts:
#       - edition.cnn.com
#     route:
#     - destination:
#         host: edition.cnn.com
#         port:
#           number: 443
#       weight: 100
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: direct-google-through-egress-gateway
#   namespace: external
# spec:
#   hosts:
#   - www.google.com
#   gateways:
#   - mesh
#   - istio-egressgateway-ext
#   tls:
#   - match:
#     - gateways:
#       - mesh
#       port: 443
#       sniHosts:
#       - www.google.com
#     route:
#     - destination:
#         host: istio-egressgateway-ext.external.svc.cluster.local
#         subset: cnn
#         port:
#           number: 443
#   - match:
#     - gateways:
#       - istio-egressgateway-ext
#       port: 443
#       sniHosts:
#       - www.google.com
#     route:
#     - destination:
#         host: www.google.com
#         port:
#           number: 443
#       weight: 100
