Deployment/egress-cnn-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cnn
  namespace: external
spec:
  hosts:
  - edition.cnn.com
  ports:
  - number: 443
    name: tls
    protocol: TLS
  resolution: DNS
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: istio-egressgateway
#   namespace: external
# spec:
#   selector:
#     istio: istio-egressgateway-ext
#   servers:
#   - port:
#       number: 80
#       name: https-port-for-tls-origination
#       protocol: HTTPS
#     hosts:
#     - edition.cnn.com
#     tls:
#       mode: ISTIO_MUTUAL
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: egressgateway-for-cnn
# spec:
#   host: istio-egressgateway-ext.external.svc.cluster.local
#   subsets:
#   - name: cnn
#     trafficPolicy:
#       loadBalancer:
#         simple: ROUND_ROBIN
#       portLevelSettings:
#       - port:
#           number: 80
#         tls:
#           mode: ISTIO_MUTUAL
#           sni: edition.cnn.com
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: direct-cnn-through-egress-gateway
#   namespace: external
# spec:
#   hosts:
#   - edition.cnn.com
#   gateways:
#   - istio-egressgateway
#   - mesh
#   http:
#   - match:
#     - gateways:
#       - mesh
#       port: 80
#     route:
#     - destination:
#         host: istio-egressgateway-ext.istio-system.svc.cluster.local
#         subset: cnn
#         port:
#           number: 80
#       weight: 100
#   - match:
#     - gateways:
#       - istio-egressgateway
#       port: 80
#     route:
#     - destination:
#         host: edition.cnn.com
#         port:
#           number: 443
#       weight: 100
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: originate-tls-for-edition-cnn-com
#   namespace: external
# spec:
#   host: edition.cnn.com
#   trafficPolicy:
#     loadBalancer:
#       simple: ROUND_ROBIN
#     portLevelSettings:
#     - port:
#         number: 443
#       tls:
#         mode: SIMPLE # initiates HTTPS for connections to edition.cnn.com
