Deployment/egress-google-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google
  namespace: external
spec:
  hosts:
  - www.google.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  # - number: 80
  #   name: http
  #   protocol: HTTP
  resolution: DNS

# ---

# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: ext-res-dr
#   namespace: external
# spec:
#   host: istio-egressgateway-ext.external.svc.cluster.local
#   subsets:
#   - name: google
# ---

# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: ext-res-gw
#   namespace: external
# spec:
#   selector:
#     istio: istio-egressgateway-ext
#   servers:
#   - port:
#       number: 443
#       name: tls
#       protocol: TLS
#     hosts:
#     - www.google.com
#     tls:
#       mode: PASSTHROUGH

# ---

# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: ext-res-vs
#   namespace: external
# spec:
#   hosts:
#   - www.google.com
#   gateways:
#   - mesh
#   - ext-res-gw
#   tls:
#   - match:
#     - gateways:
#       - mesh
#       port: 443
#       sniHosts:
#       - www.google.com
#     route:
#     - destination:
#         host: istio-egressgateway-ext.external.svc.cluster.local
#         subset: google
#         port:
#           number: 443
#   - match:
#     - gateways:
#       - ext-res-gw
#       port: 443
#       sniHosts:
#       - www.google.com
#     route:
#     - destination:
#         host: www.google.com
#         port:
#           number: 443
#       weight: 100
