Deployment/egress-petstore-gtw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egress-apim-ext
  namespace: external
spec:
  selector:
    istio: istio-egressgateway-ext
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - petstore.swagger.io
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-petstore
spec:
  host: istio-egressgateway-ext.external.svc.cluster.local
  subsets:
  - name: petstore
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 80
        tls:
          mode: ISTIO_MUTUAL
          sni: petstore.swagger.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-petstore-through-egress-gateway
spec:
  hosts:
  - petstore.swagger.io
  gateways:
  - mesh
  - egress-apim-ext
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - petstore.swagger.io
    route:
    - destination:
        host: istio-egressgateway-ext.external.svc.cluster.local
        subset: cnn
        port:
          number: 443
  - match:
    - gateways:
      - egress-apim-ext
      port: 443
      sniHosts:
      - petstore.swagger.io
    route:
    - destination:
        host: petstore.swagger.io
        port:
          number: 443
      weight: 100
