Deployment/egress-petstore-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: petstore
  namespace: external
spec:
  hosts:
  - petstore.swagger.io
  ports:
  - number: 443
    name: tls
    protocol: TLS
  resolution: DNS
