Deployment/apimgr-authorizations.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: admin-tcp-policy
  namespace: internal
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: apimgr
      app.kubernetes.io/component: apitraffic
  action: ALLOW
  rules:
  - to:
    - operation:
       ports: ["8085"]
